更新文档和代码以支持数据脱敏功能，添加新的上传和下载接口，更新前端界面，增强配置文件，修改Docker配置以支持输出目录

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,10 @@ services:
       CELERY_BROKER_URL: redis://redis:6379/0
       CELERY_RESULT_BACKEND: redis://redis:6379/1
       UPLOAD_DIR: /data/uploads
+      OUTPUT_DIR: /data/outputs
     volumes:
       - uploads:/data/uploads
+      - outputs:/data/outputs
     ports:
       - "8000:8000"
     depends_on:
@@ -40,8 +42,10 @@ services:
       CELERY_BROKER_URL: redis://redis:6379/0
       CELERY_RESULT_BACKEND: redis://redis:6379/1
       UPLOAD_DIR: /data/uploads
+      OUTPUT_DIR: /data/outputs
     volumes:
       - uploads:/data/uploads
+      - outputs:/data/outputs
     depends_on:
       - db
       - redis
@@ -64,3 +68,4 @@ services:
 volumes:
   db-data:
   uploads:
+  outputs:
